# job-candidate-selector

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release_validation.yml
Data/: job_description.txt
configs/: skill_taxonomy.yaml  weights.yaml
docs/: architecture.md  case_study.md  dependencies.md  features.md  ranking.md  release_process.md  research_history.md  testing.md  validation.md
docs/diagrams/: ci_pipeline.mmd  (+5 more)
outputs/: phase46_report.md  phase46_submission.csv  phase46_submission_audit.json  phase46_submission_audit.md  phase46_top100.json  phase46_vs_phase45.json  phase46_vs_phase45.md
pages/: 01_Upload.py  02_Ranking.py  03_Results.py  04_Candidate_Detail.py  05_Analytics.py  06_Downloads.py
scripts/: audit_prefilter_impact.py  phase45_pipeline.py  phase46_optimization.py  phase46_release_freeze.py
tests/: test_alignment.py  test_candidate_parser.py  test_csv_generation.py  test_evidence.py  test_features_evidence.py  test_features_honeypot.py  test_features_quality.py  test_features_retrieval.py  test_ingestion.py  test_jd_parser.py  test_malformed_records.py  test_ownership.py  test_parser_edge_cases.py  test_pipeline_edge_cases.py  test_prefilter_small.py  test_ranking.py  test_reranker.py  test_retrieval_intelligence.py  test_risk.py
(+25 files in other folders)
